@@ -5,6 +5,7 @@
 <body>
 <ul>
 <li>Add patch to pass selected text to blogging clients. (Contributed by Pukka author Justin R. Miller).</li>
+<li>Fix exception caused by misparsing author field in some Atom feed items.</li>
 </ul>
 </body>
 </html>
